--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -145,7 +145,7 @@
     <string name="tools_installer_working">Installazione di wg e wg-quick</string>
     <string name="tools_unavailable_error">Strumenti necessari non disponibili</string>
     <string name="transfer">Trasferisci</string>
-    <string name="transfer_rx_tx">rx: %s, tx: %s</string>
+    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
     <string name="transfer_bytes">%d B</string>
     <string name="transfer_kibibytes">%.2f KiB</string>
     <string name="transfer_mibibytes">%.2f MiB</string>
