--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -145,7 +145,7 @@
     <string name="tools_installer_working">Установка wg и wg-quick</string>
     <string name="tools_unavailable_error">Необходимые инструменты недоступны</string>
     <string name="transfer">Статистика</string>
-    <string name="transfer_rx_tx">Принято: %s, Отдано: %s</string>
+    <string name="transfer_rx_tx">Принято: %1$s, Отдано: %2$s</string>
     <string name="transfer_bytes">%d Б</string>
     <string name="transfer_kibibytes">%.2f Кб</string>
     <string name="transfer_mibibytes">%.2f Мб</string>
