--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -139,7 +139,7 @@
     <string name="tools_installer_working">正在安装 wg 与 wg-quick...</string>
     <string name="tools_unavailable_error">所需工具不可用</string>
     <string name="transfer">流量</string>
-    <string name="transfer_rx_tx">接收：%s，发送：%s</string>
+    <string name="transfer_rx_tx">接收：%1$s，发送：%2$s</string>
     <string name="transfer_bytes">%d B</string>
     <string name="transfer_kibibytes">%.2f KiB</string>
     <string name="transfer_mibibytes">%.2f MiB</string>
