--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -104,6 +104,9 @@
     <string name="module_installer_working">Downloading and installing…</string>
     <string name="module_installer_error">Something went wrong. Please try again</string>
     <string name="mtu">MTU</string>
+    <string name="multiple_tunnels_title">Allow multiple simultaneous tunnels</string>
+    <string name="multiple_tunnels_summary_on">Multiple tunnels may be turned on simultaneously</string>
+    <string name="multiple_tunnels_summary_off">Turning on one tunnel will turn off others</string>
     <string name="name">Name</string>
     <string name="no_config_error">Trying to bring up a tunnel with no config</string>
     <string name="no_configs_error">No configurations found</string>
