--- a/ui/src/main/res/values-ja/strings.xml
+++ b/ui/src/main/res/values-ja/strings.xml
@@ -97,7 +97,15 @@
     <string name="module_installer_title">カーネルモジュールをダウンロードしてインストールする</string>
     <string name="module_installer_working">ダウンロードしてインストールしています…</string>
     <string name="module_installer_error">失敗しました. 再度実行してみてください</string>
+    <string name="module_disabler_disabled_title">カーネルモジュールバックエンドの有効化</string>
+    <string name="module_disabler_disabled_summary">カーネルモジュールは実験的ですがパフォーマンスが向上する可能性があります。</string>
+    <string name="module_disabler_enabled_title">カーネルモジュールバックエンドの無効化</string>
+    <string name="module_disabler_enabled_summary">ユーザースペースバックエンドは低速ですが安定しています。</string>
+    <string name="module_disabler_working">アプリケーションは5秒以内に再起動します</string>
     <string name="mtu">MTU</string>
+    <string name="multiple_tunnels_title">複数トンネルの同時有効化</string>
+    <string name="multiple_tunnels_summary_on">同時に複数のトンネルを有効化できます</string>
+    <string name="multiple_tunnels_summary_off">トンネルを有効化すると他のトンネルは無効になります</string>
     <string name="name">名前</string>
     <string name="no_config_error">未設定のままトンネルを起動しようとしています</string>
     <string name="no_configs_error">設定が見つかりません</string>
@@ -117,6 +125,8 @@
     <string name="public_key">公開鍵</string>
     <string name="public_key_description">公開鍵</string>
     <string name="qr_code_hint">Tip: `qrencode -t ansiutf8 &lt; tunnel.conf` で生成できます</string>
+    <string name="restore_on_boot_summary_on">起動時に前回有効化されていたトンネルを有効にする</string>
+    <string name="restore_on_boot_summary_off">起動時にトンネルを有効化しない</string>
     <string name="restore_on_boot_title">起動時に復元</string>
     <string name="save">保存</string>
     <string name="select_all">すべて選択</string>
