strings: update Simplified Indonesian translation
Signed-off-by: Fiqri Ardyansyah <fiqri15072019@gmail.com>

--- a/ui/src/main/res/values-id/strings.xml
+++ b/ui/src/main/res/values-id/strings.xml
@@ -30,7 +30,7 @@
     <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%1$s\'s %2$s</string>
     <string name="bad_config_context_top_level">%s</string>
-    <string name="bad_config_error">%1$s in %2$s</string>
+    <string name="bad_config_error">%1$s di %2$s</string>
     <string name="bad_config_explanation_pka">: Harus positif dan tidak lebih dari 65535</string>
     <string name="bad_config_explanation_positive_number">: Angka harus positif</string>
     <string name="bad_config_explanation_udp_port">: Harus nomor port UDP yang valid</string>
@@ -49,9 +49,9 @@
     <string name="config_exists_error">Konfigurasi untuk “%s” sudah ada</string>
     <string name="config_file_exists_error">Konfigurasi file “%s” sudah ada</string>
     <string name="config_not_found_error">Konfigurasi file “%s” tidak ditemukan</string>
-    <string name="config_rename_error">Tidak dapat mengganti nama file konfigurasi “%s”</string>
-    <string name="config_save_error">Tidak dapat menyimpan konfigurasi untuk “%1$s”: %2$s</string>
-    <string name="config_save_success">Berhasil menyimpan konfigurasi untuk “%s”</string>
+    <string name="config_rename_error">Nama konfigurasi “%s” Tidak bisa diganti</string>
+    <string name="config_save_error">Konfigurasi “%1$s”: %2$s tidak bisa disimpan</string>
+    <string name="config_save_success">Konfigurasi “%s” berhasil disimpan</string>
     <string name="create_activity_title">Buat tunel WireGuard</string>
     <string name="create_bin_dir_error">Tidak dapat membuat direktori biner lokal</string>
     <string name="create_empty">Buat dari awal</string>
@@ -75,22 +75,22 @@
     <string name="error_up">Kesalahan menambahkan tunel: %s</string>
     <string name="exclude_private_ips">Kecualikan IP pribadi</string>
     <string name="excluded_applications">Kecualikan aplikasi</string>
-    <string name="generate">Menimbulkan</string>
+    <string name="generate">Generate</string>
     <string name="generic_error">Eror “%s” Tidak diketahui</string>
     <string name="hint_automatic">(otomatis)</string>
-    <string name="hint_generated">(menimbulkan)</string>
+    <string name="hint_generated">(generate)</string>
     <string name="hint_optional">(pilihan)</string>
     <string name="hint_random">(acak)</string>
-    <string name="illegal_filename_error">Nama file ilegal “%s”</string>
-    <string name="import_error">Tidak dapat mengimpor tunel: %s</string>
+    <string name="illegal_filename_error">“%s” Nama file ilegal</string>
+    <string name="import_error">Tunel %s tidak bisa diimpor</string>
     <string name="import_from_qr_code">Mengimpor tunel dari kode QR</string>
-    <string name="import_success">Sudah diimpor “%s”</string>
+    <string name="import_success">“%s” Sudah diimpor</string>
     <string name="interface_title">Antarmuka</string>
     <string name="key_length_explanation_base64">: Kunci WireGuard base64 harus terdiri dari 44 karakter (32 bit)</string>
     <string name="key_length_explanation_binary">: Kunci WireGuard harus terdiri dari 32 bit</string>
     <string name="key_length_explanation_hex">: Kunci hex WireGuard Harus terdiri dari 64 karakter (32 bit)</string>
     <string name="listen_port">Perhatikan port</string>
-    <string name="log_export_error">Log tidak dapat diekspor: %s</string>
+    <string name="log_export_error">Log %s tidak bisa diekspor</string>
     <string name="log_export_success">Simpan ke “%s”</string>
     <string name="log_export_summary">File log akan disimpan di folder download</string>
     <string name="log_export_title">Ekspor file log</string>
@@ -106,7 +106,7 @@
     <string name="module_disabler_disabled_summary">Modul kernel eksperimental dapat meningkatkan kinerja</string>
     <string name="module_disabler_enabled_title">Nonaktifkan backend modul kernel</string>
     <string name="module_disabler_enabled_summary">Backend userspace yang lebih lambat dapat meningkatkan stabilitas</string>
-    <string name="module_disabler_working">Aplikasi akan memulai ulang dalam 5 detik</string>
+    <string name="module_disabler_working">Aplikasi akan mulai ulang dalam 5 detik</string>
     <string name="mtu">MTU</string>
     <string name="multiple_tunnels_title">Izinkan beberapa sekaligus tunel</string>
     <string name="multiple_tunnels_summary_on">Beberapa tunel dapat dihidupkan secara bersamaan</string>
@@ -120,18 +120,18 @@
     <string name="parse_error_inet_endpoint">titik akhir</string>
     <string name="parse_error_inet_network">Jaringan IP</string>
     <string name="parse_error_integer">angka</string>
-    <string name="parse_error_reason">Tidak dapat mengurai %1$s “%2$s”</string>
+    <string name="parse_error_reason">%1$s “%2$s” Tidak dapat diuraikan</string>
     <string name="peer">Peer</string>
     <string name="permission_description">Memungkinkan aplikasi untuk mengontrol tunel WireGuard. Aplikasi dengan izin ini dapat mengaktifkan dan menonaktifkan tunel WireGuard yang berpotensi salah mengatur lalu lintas Internet.</string>
     <string name="permission_label">Kontrol tunel WireGuard</string>
     <string name="persistent_keepalive">Keepalive persisten</string>
-    <string name="pre_shared_key">Kunci bersama</string>
+    <string name="pre_shared_key">Kunci Pra-bersama</string>
     <string name="private_key">Kunci pribadi</string>
     <string name="public_key">Kunci publik</string>
     <string name="public_key_description">Kunci publik</string>
-    <string name="qr_code_hint">Tips: hasilkan dengan `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
+    <string name="qr_code_hint">Tips: generate dengan `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
     <string name="restore_on_boot_summary_on">Tunel yang diaktifkan akan dimunculkan saat boot</string>
-    <string name="restore_on_boot_summary_off">Tunel yang diaktifkan tidak akan dimunculkan saat boot</string>
+    <string name="restore_on_boot_summary_off">Tunel yang diaktifkan tidak akan ditampilkan saat boot</string>
     <string name="restore_on_boot_title">Pulihkan saat boot</string>
     <string name="save">Simpan</string>
     <string name="select_all">Pilih semua</string>
@@ -140,13 +140,13 @@
     <string name="shell_exit_status_read_error">Shell tidak dapat membaca status keluar</string>
     <string name="shell_marker_count_error">Shell diharapkan 4 nilai, diterima %d</string>
     <string name="shell_start_error">Gagal memulai shell: %d</string>
-    <string name="toggle_error">Gagal mengalihkan tunel WireGuard: %s</string>
+    <string name="toggle_error">Tunel WireGuard %s gagal dialihkan</string>
     <string name="tools_installer_already">wg and wg-quick sudah terpasang</string>
     <string name="tools_installer_failure">Tidak dapat memasang alat command-line (tidak root?)</string>
     <string name="tools_installer_initial">Pasang alat opsional untuk skrip</string>
     <string name="tools_installer_initial_magisk">Pasang alat opsional untuk skrip sebagai modul Magisk</string>
     <string name="tools_installer_initial_system">Pasang alat opsional untuk skrip ke dalam partisi sistem</string>
-    <string name="tools_installer_success_magisk">wg and wg-quick dipasang sebagai modul Magisk (diperlukan memulai ulang)</string>
+    <string name="tools_installer_success_magisk">wg and wg-quick dipasang sebagai modul Magisk (diperlukan mulai ulang)</string>
     <string name="tools_installer_success_system">wg and wg-quick dipasang ke dalam partisi sistem</string>
     <string name="tools_installer_title">Pasang alat command line</string>
     <string name="tools_installer_working">Memasang wg and wg-quick</string>
@@ -159,26 +159,26 @@
     <string name="transfer_gibibytes">%.2f GiB</string>
     <string name="transfer_tibibytes">%.2f TiB</string>
     <string name="tun_create_error">Tidak dapat membuat perangkat tun</string>
-    <string name="tunnel_config_error">Tidak dapat mengkonfigurasikan tunel (dikembalikan wg-quick %d)</string>
-    <string name="tunnel_create_error">Tidak dapat membuat tunel: %s</string>
-    <string name="tunnel_create_success">Berhasil membuat tunnel “%s”</string>
+    <string name="tunnel_config_error">Tidak bisa mengkonfigurasikan tunel (wg-quick %d dikembalikan)</string>
+    <string name="tunnel_create_error">Tunel %s tidak bisa dibuat</string>
+    <string name="tunnel_create_success">Tunel “%s” Berhasil dibuat</string>
     <string name="tunnel_error_already_exists">Tunel “%s” sudah ada</string>
     <string name="tunnel_error_invalid_name">Nama tidak valid</string>
-    <string name="tunnel_list_placeholder">Tambahkan tunel menggunakan tombol biru</string>
+    <string name="tunnel_list_placeholder">Tambahkan tunel menggunakan tombol +</string>
     <string name="tunnel_name">Nama tunel</string>
-    <string name="tunnel_on_error">Tidak dapat mengaktifkan tunel (dikembalikan wgTurnOn %d)</string>
-    <string name="tunnel_rename_error">Tidak dapat mengganti nama tunel: %s</string>
+    <string name="tunnel_on_error">Tidak dapat mengaktifkan tunel (wgTurnOn %d dikembalikan)</string>
+    <string name="tunnel_rename_error">Nama tunel %s tidak bisa diganti</string>
     <string name="tunnel_rename_success">Berhasil mengganti nama tunnel ke “%s”</string>
     <string name="type_name_go_userspace">Ke userspace</string>
     <string name="type_name_kernel_module">Modul kernel</string>
     <string name="unknown_error">Eror tidak diketahui</string>
     <string name="version_summary">%1$s backend v%2$s</string>
-    <string name="version_summary_checking">Mengecek %s versi backend</string>
+    <string name="version_summary_checking">Mengecek versi backend %s</string>
     <string name="version_summary_unknown">Versi %s Tidak diketahui</string>
     <string name="version_title">WireGuard untuk Android v%s</string>
     <string name="vpn_not_authorized_error">Layanan VPN tidak diotorisasi oleh pengguna</string>
     <string name="vpn_start_error">Tidak dapat memulai layanan VPN Android</string>
-    <string name="zip_export_error">Tidak dapat mengekspor tunel: %s</string>
+    <string name="zip_export_error">Tunel %s tidak bisa diekspor</string>
     <string name="zip_export_success">Disimpan ke “%s”</string>
     <string name="zip_export_summary">File Zip akan disimpan di folder download</string>
     <string name="zip_export_title">Ekspor tunel ke file zip</string>
