strings: Update Japanese Translation
Signed-off-by: Eiji Tanioka <tanioka404@gmail.com>
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/src/main/res/values-ja/strings.xml
+++ b/ui/src/main/res/values-ja/strings.xml
@@ -99,6 +99,7 @@
     <string name="module_disabler_disabled_summary">カーネルモジュールは実験的ですがパフォーマンスが向上する可能性があります。</string>
     <string name="module_disabler_enabled_title">カーネルモジュールバックエンドの無効化</string>
     <string name="module_disabler_enabled_summary">ユーザースペースバックエンドは低速ですが安定しています。</string>
+    <string name="success_application_will_restart">成功。アプリケーションは再起動します…</string>
     <string name="mtu">MTU</string>
     <string name="multiple_tunnels_title">複数トンネルの同時有効化</string>
     <string name="multiple_tunnels_summary_on">同時に複数のトンネルを有効化できます</string>
