--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -55,8 +55,8 @@
     <string name="create_activity_title">Create WireGuard Tunnel</string>
     <string name="create_bin_dir_error">Cannot create local binary directory</string>
     <string name="create_empty">Create from scratch</string>
-    <string name="create_from_file">Create from file or archive</string>
-    <string name="create_from_qr_code">Create from QR code</string>
+    <string name="create_from_file">Import from file or archive</string>
+    <string name="create_from_qr_code">Scan from QR code</string>
     <string name="create_output_dir_error">Cannot create output directory</string>
     <string name="create_downloads_file_error">Cannot create file in downloads directory</string>
     <string name="create_temp_dir_error">Cannot create local temporary directory</string>
